--- a/week 2-1-Layouts in JetpackCompose/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/app/build.gradle
@@ -59,10 +59,12 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation 'io.coil-kt:coil-compose:1.3.0'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
 
 }
